syntax = "proto3";

option go_package = "github.com/404minds/avl-receiver/internal/types;types";

import "google/protobuf/timestamp.proto";

package types;

enum DeviceType {
    TELTONIKA = 0;
    WANWAY = 1;
    CONCOX = 2;
}

enum DeviceProtocolType {
    FM1200 = 0;
    GT06 = 1;
    TR06 = 2;
}

message DeviceStatus {
    string imei = 1;
    DeviceType device_type = 2;
    google.protobuf.Timestamp timestamp = 3;

    GPSPosition position = 4;
    VehicleStatus vehicle_status = 5;
    int32 battery_level = 6;
    oneof raw_data {
        WanwayPacket wanway_packet = 7;
        TeltonikaPacket teltonika_packet = 8;
    }
}

message GPSPosition {
    float latitude = 1;
    float longitude = 2;
    float altitude = 3;
   optional float speed = 4 ;
    float course = 5;
    int32 satellites = 6;
}

message VehicleStatus {
    optional bool ignition = 1;
    bool overspeeding = 2;
    bool rash_driving = 3;
}

message WanwayPacket {
    bytes raw_data = 1;
}

message TeltonikaPacket {
    bytes raw_data = 1;
}
